[package]
name = "distbuild-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["tokio", "http1"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.6"
tar = "0.4"
hyper = "1"
http-body-util = "0.1"
walkdir = "2.3"